# AVM_SHIP

./: .gitignore  CONFIG_MANAGEMENT.md  usb_cam.py
config/: README.md  dst_points.yaml
config/calibration_results/: cam_front.yaml  cam_right_back.yaml  prior_parameters.yaml
config/projection_maps/: birdview_points_back.yaml  birdview_points_front.yaml  birdview_points_right_back.yaml  birdview_points_right_front.yaml
config/yaml/: birdview_points_right_back.yaml  birdview_points_right_front.yaml  cam_right_back.yaml  cam_right_front.yaml  prior_parameters.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/surrend_view/lib/surrend_view/: image_saver_node  multi_usb_camera_node_exec
install/surrend_view/share/ament_index/resource_index/package_run_dependencies/: surrend_view
install/surrend_view/share/ament_index/resource_index/parent_prefix_path/: surrend_view
install/surrend_view/share/surrend_view/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/surrend_view/share/surrend_view/cmake/: surrend_viewConfig.cmake
log/: latest_build  latest_list
src/ProjectParamCalib/: prompt.txt  resolution_verification.py  run_batch_avm.sh  run_get_full_avm.py  run_get_projection_maps.py
src/ProjectParamCalib/README/: PROJECTION_README.md  README_PATH.md
src/ProjectParamCalib/utils/: __init__.py  fisheye_camera.py  param_settings.py  path_manager.py  simple_gui.py
src/surrend_view/: CMakeLists.txt  code_rule.txt  package.xml
src/surrend_view/config/: example.yaml
src/surrend_view/config/calibrationdata_0/: ost.txt
src/surrend_view/config/calibrationdata_2/: ost.yaml
src/surrend_view/include/surrend_view/: image_saver_node.hpp  multi_usb_camera_node.hpp  path_manager.hpp
src/surrend_view/src/: image_saver_node.cpp  main.cpp  multi_usb_camera_node.cpp  path_manager.cpp
